[package]
name = "vidvid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
either = "1.9.0"
pipes = { path = "/home/lew/code/pipes" }
rand = "0.8.5"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"

[features]
serde_derive = ["serde/derive"]
